--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - "main"
 
+permissions:
+  id-token: write
+  contents: read # This is required for actions/checkout@v2
+
 jobs:
   build-and-deploy:
     runs-on: [ubuntu-latest]
