--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -1,17 +1,29 @@
-name: CICD
+name: Deploy to Amazon ECS
 
 on:
   push:
     branches:
       - "main"
 
+env:
+  AWS_REGION: eu-west-1                  # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: nodejs-app          # set this to your Amazon ECR repository name
+  ECS_SERVICE: nodejs-app-service                # set this to your Amazon ECS service name
+  ECS_CLUSTER: DevCluster               # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: nodejs-app-task-definition.json      # set this to the path to your Amazon ECS task definition                                           # file, e.g. .aws/task-definition.json
+  CONTAINER_NAME: nodejs-app           # set this to the name of the container in the
+  # containerDefinitions section of your task definition
+
 permissions:
   id-token: write
   contents: read # This is required for actions/checkout@v2
 
 jobs:
-  build-and-deploy:
-    runs-on: [ubuntu-latest]
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    environment: development
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -20,7 +32,7 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::243935758121:role/Github
           role-session-name: Github
-          aws-region: eu-west-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -31,26 +43,25 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: latest
-          REPOSITORY: nodejs-app
         run: |
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          docker build -t $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT    
-
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: nodejs-app-task-definition.json
-          container-name: nodejs-app
+          task-definition: ${{ env.ECS_TASK_DEFINITION }}
+          container-name: ${{ env.CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.image }}
+
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: nodejs-app-service
-          cluster: DevCluster
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: true
